--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Broadway</title>
   </head>
   <body>
-    <div class="header">
+    <div id="header">
        <h1>Broadway Design</h1>
        <p><a class="btn-nav" href="#">Home</a>
        </p>
@@ -17,6 +17,37 @@
        </P>
        <p><a class="btn-nav" href="#Contact">Contact</a>
        </p>
+    </div>
+    <div id="Process">
+      <h2>Our Process</h2>
+      <img src="file:///C:/Users/TOSHIBA/Desktop/projects/Broadway/resources/images/identify.svg"/>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <img src="file:///C:/Users/TOSHIBA/Desktop/projects/Broadway/resources/images/understand.svg"/>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <img src="file:///C:/Users/TOSHIBA/Desktop/projects/Broadway/resources/images/execute.svg"/>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work</p>
+    </div>
+    <div class="design">
+      <h3>Designed in New York</h3>
+    </div>
+    <div id="Work">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+    </div>
+    <div id="Team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
+    <div id="Contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555 </br> </br> E-mail: test@example.com </br> </br> Twitter: @test</p>
+    </div>
+    <div class="footer">
+      <p>&copy Broadway 2017 <a class="btn-nav" href="#header">Home</a> <a class="btn-nav" href="#header">About</a><a class="btn-nav" href="#header"> Work</a><a class="btn-nav" href="#header"> Team</a> <a class="btn-nav" href="#header"> Contact </a>
+      </p>
     </div>
   </body>
 </html>
